# CircleRush

./: CMakeLists.txt
include/Components/: AngularVelocity.hpp  BaseComponent.hpp  LinearVelocity.hpp  Position.hpp  Radius.hpp  RotationCenter.hpp
include/Components/GraphicsComponents/: BaseGraphicsComponent.hpp  CircleGraphicsComponent.hpp
include/Components/PhysicalShapes/: BasePhysicalShape.hpp  CirclePhysicalShape.hpp
include/Entities/: Entity.hpp
include/GraphicsSystem/: Color.hpp  GraphicsSystem.hpp
include/MathUtils/: CoordSystem.hpp  Primitives.hpp  Ranges.hpp  Vector2.hpp  test.cpp
include/Systems/: EntityManager.hpp  PhysicalSystem.hpp  World.hpp
include/TypeTraits/: NumericalType.hpp  test.cpp
src/Components/: BaseComponent.cpp
src/Components/GraphicsComponents/: BaseGraphicsComponent.cpp  CircleGraphicsComponent.cpp
src/Components/PhysicalShapes/: BasePhysicalShape.cpp  CirclePhysicalShape.cpp
src/Entities/: Entity.cpp
src/Framework/: Game.cpp
src/GraphicsSystem/: Color.cpp  GraphicsSystem.cpp
src/MathUtils/: CoordSystem.cpp
src/Systems/: EntityManager.cpp  PhysicalSystem.cpp  World.cpp
